[ refactor ] collect 코드 변경 ( #3 )